force-app/main/default/objects/SchoolAbsence__c/SchoolAbsence__c.object-meta.xml
<CustomObject>
    <description>Absence scolaire d'un athlete jeune (examens, obligations, etc.).</description>
    <label>School Absence</label>
    <nameField>
        <label>School Absence Name</label>
        <type>AutoNumber</type>
        <displayFormat>ABS-{00000}</displayFormat>
    </nameField>
    <pluralLabel>School Absences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>