force-app/main/default/objects/SchoolAbsence__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>