force-app/main/default/objects/SchoolAbsence__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exam</fullName>
                <default>true</default>
                <label>Exam</label>
            </value>
            <value>
                <fullName>School Trip</fullName>
            </value>
            <value>
                <fullName>Academic Obligation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>