force-app/main/default/objects/SchoolAbsence__c/validationRules/EndDateAfterStart.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateAfterStart</fullName>
    <active>true</active>
    <description>Empêche une date de fin d'absence scolaire antérieure à la date de début.</description>
    <errorConditionFormula>EndDate__c &lt; StartDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date must be greater than or equal to Start Date.</errorMessage>
</ValidationRule>